[tool.poetry]
name = "pdf2sb"
version = "0.3.7"
description = "Upload PDF file to Gyazo as images then convert Scrapbox format"
license = "MIT"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
readme = "README.md"
repository = "https://github.com/reiyw/pdf2sb"

[tool.poetry.dependencies]
python = "^3.6"
pdf2image = "^1.16"
python-gyazo = "^1.1"
typed-ast = "^1.5"
click = ">=7,<9"
pypdf2 = "^1.26"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pylint = "^2.4"
mypy = "^0.971.0"
rope = "^0.19.0"

[tool.poetry.scripts]
pdf2sb = "pdf2sb:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
